# NAVISIM

./: NavisimKeyStore.jks  README.md
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk  output.json
app/src/androidTest/java/com/navis/navisim/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: getRTCM3Eph.c  gpssim.c  gpssim.h  hello-jnicallback.c  lime_main.c  lime_main.h  log.h  native-lib.cpp  native-lib.h
app/src/main/cpp/API/: lms7_api.cpp  lms7_device.cpp  lms7_device.h
app/src/main/cpp/ConnectionEVB7COM/: ConnectionEVB7COMEntry.cpp
app/src/main/cpp/ConnectionRegistry/: BuiltinConnections.in.cpp  ConnectionHandle.cpp
app/src/main/cpp/ConnectionSTREAM/: ConnectionSTREAM.cpp  ConnectionSTREAMEntry.cpp
app/src/main/cpp/Connection_uLimeSDR/: Connection_uLimeSDR.cpp  Connection_uLimeSDR.h  Connection_uLimeSDREntry.cpp
app/src/main/cpp/FPGA_common/: FPGA_common.cpp
app/src/main/cpp/libusb/: core.c  libusbi.h
app/src/main/cpp/libusb/os/: linux_usbfs.c  linux_usbfs.c___jb_old___
app/src/main/cpp/libusb_old/: Makefile  core.c  io.c  libusb.h  libusbi.h  sync.c
app/src/main/cpp/libusb_old/os/: linux_usbfs.c  poll_posix.h  threads_posix.c
app/src/main/cpp/lime/: ErrorReporting.cpp  LimeSuite.h  VersionInfo.in.cpp  playback.h
app/src/main/cpp/lms7002m/: CalibrationCache.cpp  LMS7002M.cpp  LMS7002M_RxTxCalibrations.cpp
app/src/main/cpp/protocols/: LMS64CProtocol.cpp
app/src/main/cpp/sqlite-3.12/: shell.c
app/src/main/java/com/navis/navisim/: JniHandler.java  MainActivity.java  Setting.java  SqlController.java
app/src/main/res/layout/: activity_main.xml  activity_setting.xml  content_setting.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/navis/navisim/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
